CSS tweak to ensure that browsers (Chrome) don't adjust the page size / scrollbar due to the tooltip divs sitting at the bottom of the page while being removed. (You get some pretty 'odd' scrollbar 'animation' in Chrome when hovering over a graph line, where tooltips pop in and out of existence while you hover.)

--- a/src/d3.css
+++ b/src/d3.css
@@ -65,6 +65,10 @@
   margin: 2px 0;
 }
 
+.nvtooltip-pending-removal {
+  position: absolute;
+  pointer-events: none;
+}
 
 /********************
  * SVG CSS 
